tests/test_assets/semantic/invalid/control_flow/missing_return_switch.cog
Color :: enum(u16) {
    Red,
    Green,
    Blue,
}

return_bad_switch_no_default::(c: Color) -> i32 {
    switch c {
        case Color.Red:
            return 1;
    }
}