tests/test_assets/semantic/invalid/control_flow/missing_return_switch.expected
semantic error at line 7: non-void function may not return a value
1 semantic error generated.
